--- a/mihu-ai.html
+++ b/mihu-ai.html
@@ -1465,19 +1465,19 @@
 
 
         function App() {
-            // Dynamic API URL - works for both localhost and production
-            const getApiUrl = () => {
-                // For local development
-                if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
-                    return 'http://localhost:3002';
-                } else if (window.location.hostname.includes('192.168.') || window.location.hostname.includes('10.') || window.location.hostname.includes('172.')) {
-                    // For mobile devices on the same network
-                    return `http://${window.location.hostname}:3002`;
-                } else {
-                    // For production (Vercel, etc.) - use the same origin
-                    return window.location.origin;
-                }
-            };
+        // Dynamic API URL - works for both localhost and production
+        const getApiUrl = () => {
+            // For local development
+            if (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') {
+                return 'http://localhost:3002';
+            } else if (window.location.hostname.includes('192.168.') || window.location.hostname.includes('10.') || window.location.hostname.includes('172.')) {
+                // For mobile devices on the same network
+                return `http://${window.location.hostname}:3002`;
+            } else {
+                // For production (Vercel) - use API routes
+                return window.location.origin + '/api';
+            }
+        };
 
             const [messages, setMessages] = useState([
                 {
